--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="zallkaltim" content="width=device-width, initial-scale=1.0">
     <title>Ular Tangga Multiplayer</title>
     <style>
         body {
